@startuml Library System
entity "BookCopy" {
    copy_number : INTEGER <<PK>>
    ISBN : VARCHAR(13) <<PK, FK>>
    shelf_location : INTEGER
}

entity "Book" {
    ISBN : VARCHAR(13) <<PK>>
    publication_year : DATE
    title : VARCHAR(255)
    author : VARCHAR(255)
    page_count : INTEGER
}

entity "Publisher" {
    publisher_name : INTEGER <<PK>>
    address : TEXT
}

entity "Category" {
    name : VARCHAR(255) <<PK>>
    parent_name : VARCHAR(255) <<FK>>
}

entity "Reader" {
    reader_id : INTEGER <<PK>>
    last_name : VARCHAR(255)
    first_name : VARCHAR(255)
    address : TEXT
    birth_date : DATE
}

entity "Record" {
    reader_id : INTEGER <<PK>>
    copy_id : INTEGER <<PK, FK>>
    ISBN : VARCHAR(13) <<PK, FK>>
    return_date : DATE <<PK>>
}

Book ||--o{ BookCopy: "has"
Book }o--|| Publisher: "published by"
Book }o--o{ Category: "belongs to"
Category |o--o{ Category : "is subcategory of"
Reader ||--o{ Record : "borrows"
BookCopy ||--o{ Record : "is borrowed in"
@enduml